# Waterpolo_tracking

./: .gitignore  README.md  config.yaml  label_studio.bat  main.py  pyproject.toml  setup.py
models/: __init__.py
pipelines/: __init__.py  ball_pipeline.py  goal_pipeline.py  goalkeeper_pipeline.py  players_pipeline.py
tests/: Detection_test.py  Tracker_test.py
trackers/: __init__.py  ball_tracker.py  base_tracker.py  goal_tracker.py  goalkeeper_tracker.py  player_tracker.py
utils/: __init__.py  config.py  data_pipeline.py  dataset_pipeline.py  label_studio_start_up.py  video_utils.py
