[tool.poetry]
name = "waterpolo-tracking"
version = "0.1.0"
description = "Water polo tracking system using computer vision"
packages = [
    { include = "utils" },
    { include = "pipelines" },
    { include = "trackers" },
    { include = "models" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.0"
ultralytics = "^8.0.0"
opencv-python = "^4.8.0"
torch = "^2.2.0"
torchvision = "^0.17.0"
albumentations = "^2.0.7"
pillow = "^10.0.0"
scipy = "^1.12.0"
filterpy = "^1.4.5"
scikit-image = "^0.22.0"
supervision = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 